<?xml version="1.0" encoding="utf-8"?>
<!--Name: Ulysses Carbajal -->
<!--CWID: 887269900 -->
<!--Email: UlyssesC@csu.fullerton.edu -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colorBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Color Display Box -->
    <View
        android:id="@+id/displayColorBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="@id/tvHexColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Hex Color Value -->
    <TextView
        android:id="@+id/tvHexColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/redSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />


    <!-- Red Components -->
    <Switch
        android:id="@+id/redSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Red_switch_label"
        android:textColor="#FF0000"
        android:thumbTint="#FF0000"
        android:trackTint="#FF0000"
        android:checked="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/greenSwitch"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:thumbTint="@android:color/holo_red_dark"
        android:progressTint="@android:color/holo_red_dark"
        android:max="100"
        app:layout_constraintStart_toEndOf="@id/redSwitch"
        app:layout_constraintEnd_toStartOf="@id/redValue"
        app:layout_constraintBottom_toBottomOf="@id/redSwitch"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/redValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="4"
        android:textColor="@android:color/holo_red_light"
        android:text="0.00"
        android:textSize="14sp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:hint="@string/red_value_hint"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/redSwitch"
        android:autofillHints=""
        tools:ignore="HardcodedText,LabelFor" />

    <!-- Green Components -->
    <Switch
        android:id="@+id/greenSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_switch_label"
        android:textColor="@android:color/holo_green_dark"
        android:thumbTint="@android:color/holo_green_dark"
        android:trackTint="@android:color/holo_green_light"
        android:checked="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/blueSwitch"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:thumbTint="@android:color/holo_green_dark"
        android:progressTint="@android:color/holo_green_dark"
        android:max="100"
        app:layout_constraintStart_toEndOf="@id/greenSwitch"
        app:layout_constraintEnd_toStartOf="@id/greenValue"
        app:layout_constraintBottom_toBottomOf="@id/greenSwitch"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/greenValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="@android:color/holo_green_dark"
        android:hint="@string/green_value_hint"
        android:ems="4"
        android:text="0.00"
        android:textSize="14sp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/greenSwitch"
        android:autofillHints=""
        tools:ignore="HardcodedText,LabelFor" />

    <!-- Blue Components -->
    <Switch
        android:id="@+id/blueSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_switch_label"
        android:textColor="@android:color/holo_blue_dark"
        android:thumbTint="@android:color/holo_blue_dark"
        android:trackTint="@android:color/holo_blue_light"
        android:checked="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:thumbTint="@android:color/holo_blue_dark"
        android:progressTint="@android:color/holo_blue_dark"
        android:max="100"
        app:layout_constraintStart_toEndOf="@id/blueSwitch"
        app:layout_constraintEnd_toStartOf="@id/blueValue"
        app:layout_constraintBottom_toBottomOf="@id/blueSwitch"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/blueValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="@android:color/holo_blue_dark"
        android:ems="4"
        android:text="0.00"
        android:textSize="14sp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/blueSwitch"
        android:autofillHints=""
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_button_label"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
